// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ModuleNavigationAlt - Snapshot (Experimental Enabled) Loading state 1`] = `
<View
  accessibilityLabel="loading items"
  accessibilityState={
    {
      "busy": true,
    }
  }
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#E8EBF1",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      },
      {
        "borderColor": "#E8EBF1",
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "gap": 12,
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {},
            }
          }
          jestInlineStyle={
            [
              {
                "backgroundColor": "#E8EBF1",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "height": 32,
                "width": 32,
              },
              {
                "animationDuration": "1250ms",
                "animationIterationCount": "infinite",
                "animationName": {
                  "0%, 100%": {
                    "opacity": 0.75,
                  },
                  "50%": {
                    "opacity": 0.35,
                  },
                },
                "animationTimingFunction": CubicBezierEasing {
                  "x1": 0.37,
                  "x2": 0.63,
                  "y1": 0,
                  "y2": 1,
                },
              },
            ]
          }
          style={
            [
              {
                "backgroundColor": "#E8EBF1",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "height": 32,
                "width": 32,
              },
              {},
            ]
          }
        />
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": 4,
            }
          }
        >
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 12,
                  "width": 52,
                },
                {
                  "animationDuration": "1250ms",
                  "animationIterationCount": "infinite",
                  "animationName": {
                    "0%, 100%": {
                      "opacity": 0.75,
                    },
                    "50%": {
                      "opacity": 0.35,
                    },
                  },
                  "animationTimingFunction": CubicBezierEasing {
                    "x1": 0.37,
                    "x2": 0.63,
                    "y1": 0,
                    "y2": 1,
                  },
                },
              ]
            }
            style={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 12,
                  "width": 52,
                },
                {},
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 16,
                  "width": 96,
                },
                {
                  "animationDuration": "1250ms",
                  "animationIterationCount": "infinite",
                  "animationName": {
                    "0%, 100%": {
                      "opacity": 0.75,
                    },
                    "50%": {
                      "opacity": 0.35,
                    },
                  },
                  "animationTimingFunction": CubicBezierEasing {
                    "x1": 0.37,
                    "x2": 0.63,
                    "y1": 0,
                    "y2": 1,
                  },
                },
              ]
            }
            style={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 16,
                  "width": 96,
                },
                {},
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 12,
                  "width": 160,
                },
                {
                  "animationDuration": "1250ms",
                  "animationIterationCount": "infinite",
                  "animationName": {
                    "0%, 100%": {
                      "opacity": 0.75,
                    },
                    "50%": {
                      "opacity": 0.35,
                    },
                  },
                  "animationTimingFunction": CubicBezierEasing {
                    "x1": 0.37,
                    "x2": 0.63,
                    "y1": 0,
                    "y2": 1,
                  },
                },
              ]
            }
            style={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 12,
                  "width": 160,
                },
                {},
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "backgroundColor": "#E8EBF1",
            "borderCurve": "continuous",
            "borderRadius": 16,
            "height": 24,
            "width": 64,
          },
          {
            "animationDuration": "1250ms",
            "animationIterationCount": "infinite",
            "animationName": {
              "0%, 100%": {
                "opacity": 0.75,
              },
              "50%": {
                "opacity": 0.35,
              },
            },
            "animationTimingFunction": CubicBezierEasing {
              "x1": 0.37,
              "x2": 0.63,
              "y1": 0,
              "y2": 1,
            },
          },
        ]
      }
      style={
        [
          {
            "backgroundColor": "#E8EBF1",
            "borderCurve": "continuous",
            "borderRadius": 16,
            "height": 24,
            "width": 64,
          },
          {},
        ]
      }
    />
  </View>
</View>
`;

exports[`ModuleNavigationAlt - Snapshot (Experimental Enabled) Title + Subtitle 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            accessibilityLabel=""
            accessible={false}
            align="xMidYMid"
            bbHeight={32}
            bbWidth={32}
            color="#0B3EE3"
            focusable={false}
            height={32}
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 32,
                  "width": 32,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={32}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexShrink": 1,
              "gap": 8,
            }
          }
        >
          <View>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="footnote"
              maxFontSizeMultiplier={1.5}
              numberOfLines={2}
              style={
                [
                  {},
                  {
                    "color": "#0B3EE3",
                    "fontFamily": "Titillio",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 21,
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              My Title
            </Text>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="footnote"
              maxFontSizeMultiplier={1.5}
              style={
                [
                  {},
                  {
                    "color": "#555C70",
                    "fontFamily": "Titillio",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                ]
              }
            >
              A nice subtitle
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ModuleNavigationAlt - Snapshot (Experimental Enabled) Title only + chevron (onPress) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            accessibilityLabel=""
            accessible={false}
            align="xMidYMid"
            bbHeight={32}
            bbWidth={32}
            color="#0B3EE3"
            focusable={false}
            height={32}
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 32,
                  "width": 32,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={32}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexShrink": 1,
              "gap": 8,
            }
          }
        >
          <View>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="footnote"
              maxFontSizeMultiplier={1.5}
              numberOfLines={2}
              style={
                [
                  {},
                  {
                    "color": "#0B3EE3",
                    "fontFamily": "Titillio",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 21,
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              My Title
            </Text>
          </View>
        </View>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M16.2929 5.29289c.3905-.39052 1.0237-.39052 1.4142 0l6 6.00001c.3905.3905.3905 1.0237 0 1.4142l-6 6c-.3905.3905-1.0237.3905-1.4142 0-.3905-.3905-.3905-1.0237 0-1.4142L21.5858 12l-5.2929-5.29289c-.3905-.39053-.3905-1.02369 0-1.41422Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ModuleNavigationAlt - Snapshot (Experimental Enabled) With Badge (badge + chevron) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            accessibilityLabel=""
            accessible={false}
            align="xMidYMid"
            bbHeight={32}
            bbWidth={32}
            color="#0B3EE3"
            focusable={false}
            height={32}
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 32,
                  "width": 32,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={32}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexShrink": 1,
              "gap": 8,
            }
          }
        >
          <View
            accessible={true}
            style={
              [
                {
                  "alignItems": "center",
                  "borderCurve": "continuous",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 24,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                {
                  "backgroundColor": "rgba(97,220,223,0.2)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              ellipsizeMode="tail"
              maxFontSizeMultiplier={1.5}
              numberOfLines={1}
              style={
                [
                  {},
                  {
                    "color": "#61DCDF",
                    "fontFamily": "Titillio",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 16,
                  },
                  {
                    "alignSelf": "center",
                    "letterSpacing": 0.5,
                    "textTransform": "uppercase",
                  },
                ]
              }
            >
              TEST
            </Text>
          </View>
          <View>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="footnote"
              maxFontSizeMultiplier={1.5}
              numberOfLines={2}
              style={
                [
                  {},
                  {
                    "color": "#0B3EE3",
                    "fontFamily": "Titillio",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 21,
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              With Badge
            </Text>
          </View>
        </View>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M16.2929 5.29289c.3905-.39052 1.0237-.39052 1.4142 0l6 6.00001c.3905.3905.3905 1.0237 0 1.4142l-6 6c-.3905.3905-1.0237.3905-1.4142 0-.3905-.3905-.3905-1.0237 0-1.4142L21.5858 12l-5.2929-5.29289c-.3905-.39053-.3905-1.02369 0-1.41422Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ModuleNavigationAlt - Snapshot (Experimental Enabled) With Image (no icon) + chevron (onPress) - Experimental 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <View>
            <Image
              accessibilityIgnoresInvertColors={true}
              source={
                {
                  "uri": "https://example.com/icon.png",
                }
              }
              style={
                {
                  "height": "auto",
                  "resizeMode": "contain",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexShrink": 1,
              "gap": 8,
            }
          }
        >
          <View>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="footnote"
              maxFontSizeMultiplier={1.5}
              numberOfLines={2}
              style={
                [
                  {},
                  {
                    "color": "#0B3EE3",
                    "fontFamily": "Titillio",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 21,
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              With Image
            </Text>
          </View>
        </View>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M16.2929 5.29289c.3905-.39052 1.0237-.39052 1.4142 0l6 6.00001c.3905.3905.3905 1.0237 0 1.4142l-6 6c-.3905.3905-1.0237.3905-1.4142 0-.3905-.3905-.3905-1.0237 0-1.4142L21.5858 12l-5.2929-5.29289c-.3905-.39053-.3905-1.02369 0-1.41422Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ModuleNavigationAlt - Snapshot Loading state 1`] = `
<View
  accessibilityLabel="loading items"
  accessibilityState={
    {
      "busy": true,
    }
  }
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#E8EBF1",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      },
      {
        "borderColor": "#E8EBF1",
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "gap": 12,
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {},
            }
          }
          jestInlineStyle={
            [
              {
                "backgroundColor": "#E8EBF1",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "height": 32,
                "width": 32,
              },
              {
                "animationDuration": "1250ms",
                "animationIterationCount": "infinite",
                "animationName": {
                  "0%, 100%": {
                    "opacity": 0.75,
                  },
                  "50%": {
                    "opacity": 0.35,
                  },
                },
                "animationTimingFunction": CubicBezierEasing {
                  "x1": 0.37,
                  "x2": 0.63,
                  "y1": 0,
                  "y2": 1,
                },
              },
            ]
          }
          style={
            [
              {
                "backgroundColor": "#E8EBF1",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "height": 32,
                "width": 32,
              },
              {},
            ]
          }
        />
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": 4,
            }
          }
        >
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 12,
                  "width": 52,
                },
                {
                  "animationDuration": "1250ms",
                  "animationIterationCount": "infinite",
                  "animationName": {
                    "0%, 100%": {
                      "opacity": 0.75,
                    },
                    "50%": {
                      "opacity": 0.35,
                    },
                  },
                  "animationTimingFunction": CubicBezierEasing {
                    "x1": 0.37,
                    "x2": 0.63,
                    "y1": 0,
                    "y2": 1,
                  },
                },
              ]
            }
            style={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 12,
                  "width": 52,
                },
                {},
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 16,
                  "width": 96,
                },
                {
                  "animationDuration": "1250ms",
                  "animationIterationCount": "infinite",
                  "animationName": {
                    "0%, 100%": {
                      "opacity": 0.75,
                    },
                    "50%": {
                      "opacity": 0.35,
                    },
                  },
                  "animationTimingFunction": CubicBezierEasing {
                    "x1": 0.37,
                    "x2": 0.63,
                    "y1": 0,
                    "y2": 1,
                  },
                },
              ]
            }
            style={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 16,
                  "width": 96,
                },
                {},
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 12,
                  "width": 160,
                },
                {
                  "animationDuration": "1250ms",
                  "animationIterationCount": "infinite",
                  "animationName": {
                    "0%, 100%": {
                      "opacity": 0.75,
                    },
                    "50%": {
                      "opacity": 0.35,
                    },
                  },
                  "animationTimingFunction": CubicBezierEasing {
                    "x1": 0.37,
                    "x2": 0.63,
                    "y1": 0,
                    "y2": 1,
                  },
                },
              ]
            }
            style={
              [
                {
                  "backgroundColor": "#E8EBF1",
                  "borderCurve": "continuous",
                  "borderRadius": 8,
                  "height": 12,
                  "width": 160,
                },
                {},
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "backgroundColor": "#E8EBF1",
            "borderCurve": "continuous",
            "borderRadius": 16,
            "height": 24,
            "width": 64,
          },
          {
            "animationDuration": "1250ms",
            "animationIterationCount": "infinite",
            "animationName": {
              "0%, 100%": {
                "opacity": 0.75,
              },
              "50%": {
                "opacity": 0.35,
              },
            },
            "animationTimingFunction": CubicBezierEasing {
              "x1": 0.37,
              "x2": 0.63,
              "y1": 0,
              "y2": 1,
            },
          },
        ]
      }
      style={
        [
          {
            "backgroundColor": "#E8EBF1",
            "borderCurve": "continuous",
            "borderRadius": 16,
            "height": 24,
            "width": 64,
          },
          {},
        ]
      }
    />
  </View>
</View>
`;

exports[`ModuleNavigationAlt - Snapshot Title + Subtitle 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            accessibilityLabel=""
            accessible={false}
            align="xMidYMid"
            bbHeight={32}
            bbWidth={32}
            color="#0B3EE3"
            focusable={false}
            height={32}
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 32,
                  "width": 32,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={32}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexShrink": 1,
              "gap": 8,
            }
          }
        >
          <View>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="footnote"
              maxFontSizeMultiplier={1.5}
              numberOfLines={2}
              style={
                [
                  {},
                  {
                    "color": "#0B3EE3",
                    "fontFamily": "Titillio",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 21,
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              My Title
            </Text>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="footnote"
              maxFontSizeMultiplier={1.5}
              style={
                [
                  {},
                  {
                    "color": "#555C70",
                    "fontFamily": "Titillio",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                ]
              }
            >
              A nice subtitle
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ModuleNavigationAlt - Snapshot Title only + chevron (onPress) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            accessibilityLabel=""
            accessible={false}
            align="xMidYMid"
            bbHeight={32}
            bbWidth={32}
            color="#0B3EE3"
            focusable={false}
            height={32}
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 32,
                  "width": 32,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={32}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexShrink": 1,
              "gap": 8,
            }
          }
        >
          <View>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="footnote"
              maxFontSizeMultiplier={1.5}
              numberOfLines={2}
              style={
                [
                  {},
                  {
                    "color": "#0B3EE3",
                    "fontFamily": "Titillio",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 21,
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              My Title
            </Text>
          </View>
        </View>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M16.2929 5.29289c.3905-.39052 1.0237-.39052 1.4142 0l6 6.00001c.3905.3905.3905 1.0237 0 1.4142l-6 6c-.3905.3905-1.0237.3905-1.4142 0-.3905-.3905-.3905-1.0237 0-1.4142L21.5858 12l-5.2929-5.29289c-.3905-.39053-.3905-1.02369 0-1.41422Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ModuleNavigationAlt - Snapshot With Badge (badge + chevron) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            accessibilityLabel=""
            accessible={false}
            align="xMidYMid"
            bbHeight={32}
            bbWidth={32}
            color="#0B3EE3"
            focusable={false}
            height={32}
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 32,
                  "width": 32,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={32}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexShrink": 1,
              "gap": 8,
            }
          }
        >
          <View
            accessible={true}
            style={
              [
                {
                  "alignItems": "center",
                  "borderCurve": "continuous",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 24,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                {
                  "backgroundColor": "rgba(97,220,223,0.2)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              ellipsizeMode="tail"
              maxFontSizeMultiplier={1.5}
              numberOfLines={1}
              style={
                [
                  {},
                  {
                    "color": "#61DCDF",
                    "fontFamily": "Titillio",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 16,
                  },
                  {
                    "alignSelf": "center",
                    "letterSpacing": 0.5,
                    "textTransform": "uppercase",
                  },
                ]
              }
            >
              TEST
            </Text>
          </View>
          <View>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="footnote"
              maxFontSizeMultiplier={1.5}
              numberOfLines={2}
              style={
                [
                  {},
                  {
                    "color": "#0B3EE3",
                    "fontFamily": "Titillio",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 21,
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              With Badge
            </Text>
          </View>
        </View>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M16.2929 5.29289c.3905-.39052 1.0237-.39052 1.4142 0l6 6.00001c.3905.3905.3905 1.0237 0 1.4142l-6 6c-.3905.3905-1.0237.3905-1.4142 0-.3905-.3905-.3905-1.0237 0-1.4142L21.5858 12l-5.2929-5.29289c-.3905-.39053-.3905-1.02369 0-1.41422Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ModuleNavigationAlt - Snapshot With Image (no icon) + chevron (onPress) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#E8EBF1",
          "borderCurve": "continuous",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E8EBF1",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <View>
            <Image
              accessibilityIgnoresInvertColors={true}
              source={
                {
                  "uri": "https://example.com/icon.png",
                }
              }
              style={
                {
                  "height": "auto",
                  "resizeMode": "contain",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexShrink": 1,
              "gap": 8,
            }
          }
        >
          <View>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="footnote"
              maxFontSizeMultiplier={1.5}
              numberOfLines={2}
              style={
                [
                  {},
                  {
                    "color": "#0B3EE3",
                    "fontFamily": "Titillio",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 21,
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              With Image
            </Text>
          </View>
        </View>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M16.2929 5.29289c.3905-.39052 1.0237-.39052 1.4142 0l6 6.00001c.3905.3905.3905 1.0237 0 1.4142l-6 6c-.3905.3905-1.0237.3905-1.4142 0-.3905-.3905-.3905-1.0237 0-1.4142L21.5858 12l-5.2929-5.29289c-.3905-.39053-.3905-1.02369 0-1.41422Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
